--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-router-flux": "^4.0.6",
+    "react-native-simple-store": "^1.3.0",
     "react-native-vector-icons": "^6.1.0"
   },
   "devDependencies": {
